--- a/root/pom.xml
+++ b/root/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <tycho-version>4.0.4</tycho-version>
+        <eclipse-version>2023-12</eclipse-version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,7 +31,7 @@
     <repositories>
         <repository>
             <id>p2.jakarta</id>
-            <url>https://download.eclipse.org/releases/2023-12</url>
+            <url>https://download.eclipse.org/releases/${eclipse-version}</url>
             <layout>p2</layout>
         </repository>
     </repositories>
@@ -42,6 +43,19 @@
                 <artifactId>tycho-maven-plugin</artifactId>
                 <version>${tycho-version}</version>
                 <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-packaging-plugin</artifactId>
+                <version>${tycho-version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <pomDependencies>consider</pomDependencies>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
