--- a/modules/org.jkiss.common.rest/pom.xml
+++ b/modules/org.jkiss.common.rest/pom.xml
@@ -2,23 +2,17 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
     <parent>
         <groupId>com.dbeaver.common</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>com.dbeaver.common.modules</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>root/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.dbeaver.common.main</artifactId>
-    <packaging>pom</packaging>
-
-    <name>DBeaver Common Main</name>
-    <description>DBeaver Common Modules</description>
-
-    <modules>
-        <module>modules</module>
-    </modules>
+    <artifactId>org.jkiss.common.rest</artifactId>
+    <packaging>eclipse-plugin</packaging>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>REST clients</name>
 
 </project>
