--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -2,23 +2,19 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.dbeaver.common</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>com.dbeaver.common.main</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>root/pom.xml</relativePath>
+        <relativePath>../</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>com.dbeaver.common.main</artifactId>
+    <artifactId>com.dbeaver.common.modules</artifactId>
     <packaging>pom</packaging>
 
-    <name>DBeaver Common Main</name>
-    <description>DBeaver Common Modules</description>
-
     <modules>
-        <module>modules</module>
+        <module>org.jkiss.utils</module>
+        <module>org.jkiss.common.rest</module>
     </modules>
 
 </project>
