--- a/root/pom.xml
+++ b/root/pom.xml
@@ -14,9 +14,15 @@
     <properties>
         <tycho-version>4.0.4</tycho-version>
         <eclipse-version>2023-12</eclipse-version>
+        <eclipse-repo-url>https://download.eclipse.org/releases</eclipse-repo-url>
+        <eclipse-p2-repo.url>${eclipse-repo-url}/${eclipse-version}/</eclipse-p2-repo.url>
+
+        <local-p2-repo.url>https://p2.dev.dbeaver.com/eclipse-repo/</local-p2-repo.url>
+
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
         <java.version>17</java.version>
 
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -30,8 +36,8 @@
 
     <repositories>
         <repository>
-            <id>p2.jakarta</id>
-            <url>https://download.eclipse.org/releases/${eclipse-version}</url>
+            <id>eclipse-p2-repo</id>
+            <url>${eclipse-p2-repo.url}</url>
             <layout>p2</layout>
         </repository>
     </repositories>
