--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        maven-version: 3.9.6
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
