--- a/modules/org.jkiss.utils/pom.xml
+++ b/modules/org.jkiss.utils/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>com.dbeaver.common</groupId>
     <artifactId>com.dbeaver.common.modules</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>org.jkiss.utils</artifactId>
-  <version>2.1.207-SNAPSHOT</version>
+  <name>Common utils</name>
   <packaging>eclipse-plugin</packaging>
 </project>
