--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>com.dbeaver.common</groupId>
         <artifactId>com.dbeaver.common.main</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.2.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>com.dbeaver.common.modules</artifactId>
+    <name>Common modules</name>
     <packaging>pom</packaging>
 
     <modules>
