--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.dbeaver.common</groupId>
         <artifactId>root</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.2.0-SNAPSHOT</version>
         <relativePath>root/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
     <artifactId>com.dbeaver.common.main</artifactId>
     <packaging>pom</packaging>
 
-    <name>DBeaver Common Main</name>
+    <name>DBeaver Common dependencies</name>
     <description>DBeaver Common Modules</description>
 
     <modules>
