--- a/root/pom.xml
+++ b/root/pom.xml
@@ -72,6 +72,7 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <compilerVersion>${maven.compiler.source}</compilerVersion>
+                    <compilerArgs>-parameters</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
