--- a/modules/org.jkiss.utils/pom.xml
+++ b/modules/org.jkiss.utils/pom.xml
@@ -6,9 +6,22 @@
     <groupId>com.dbeaver.common</groupId>
     <artifactId>com.dbeaver.common.modules</artifactId>
     <version>2.2.0-SNAPSHOT</version>
-    <relativePath>../</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>org.jkiss.utils</artifactId>
   <name>Common utils</name>
   <packaging>eclipse-plugin</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <sourceDirectory>${project.basedir}/src/</sourceDirectory>
+  </build>
+
 </project>
