--- a/root/pom.xml
+++ b/root/pom.xml
@@ -16,6 +16,7 @@
         <eclipse-version>2024-03</eclipse-version>
         <eclipse-repo-url>https://download.eclipse.org/releases</eclipse-repo-url>
         <eclipse-p2-repo.url>${eclipse-repo-url}/${eclipse-version}/</eclipse-p2-repo.url>
+        <build-timestamp>${maven.build.timestamp}</build-timestamp>
 
         <local-p2-repo.url>https://p2.dev.dbeaver.com/eclipse-repo/</local-p2-repo.url>
 
