--- a/root/pom.xml
+++ b/root/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <tycho-version>4.0.4</tycho-version>
         <eclipse-version>2023-12</eclipse-version>
+        <elk-version>0.8.1</elk-version>
         <eclipse-repo-url>https://download.eclipse.org/releases</eclipse-repo-url>
         <eclipse-p2-repo.url>${eclipse-repo-url}/${eclipse-version}/</eclipse-p2-repo.url>
 
