dbeaver-common deps version fix

--- a/root/pom.xml
+++ b/root/pom.xml
@@ -51,6 +51,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.dbeaver.common</groupId>
+                <artifactId>org.jkiss.utils</artifactId>
+                <version>${dbeaver.common.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.boot.version}</version>
