move versions plugin to common

--- a/root/pom.xml
+++ b/root/pom.xml
@@ -236,6 +236,11 @@
                     <compilerVersion>${maven.compiler.source}</compilerVersion>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.16.2</version>
+            </plugin>
         </plugins>
     </build>
 
