--- a/root/pom.xml
+++ b/root/pom.xml
@@ -45,7 +45,7 @@
         <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
 
         <dbeaver.common.version>2.2.0-SNAPSHOT</dbeaver.common.version>
-        <lm.version>3.0.2-SNAPSHOT</lm.version>
+        <lm.version>3.0.3-SNAPSHOT</lm.version>
         <dm.version>0.0.1-SNAPSHOT</dm.version>
     </properties>
 
@@ -235,6 +235,11 @@
                     <target>${maven.compiler.target}</target>
                     <compilerVersion>${maven.compiler.source}</compilerVersion>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.16.2</version>
             </plugin>
         </plugins>
     </build>
