--- a/modules/com.dbeaver.rpc/pom.xml
+++ b/modules/com.dbeaver.rpc/pom.xml
@@ -8,7 +8,7 @@
     <version>2.2.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>org.jkiss.utils</artifactId>
+  <artifactId>org.jkiss.rpc</artifactId>
   <name>RPC framework</name>
   <packaging>eclipse-plugin</packaging>
 
@@ -16,6 +16,10 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.dbeaver.common</groupId>
+      <artifactId>org.jkiss.utils</artifactId>
     </dependency>
   </dependencies>
 
