--- a/modules/com.dbeaver.rpc/pom.xml
+++ b/modules/com.dbeaver.rpc/pom.xml
@@ -10,6 +10,7 @@
   </parent>
   <artifactId>com.dbeaver.rpc</artifactId>
   <name>RPC framework</name>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 
   <dependencies>
