--- a/root/pom.xml
+++ b/root/pom.xml
@@ -189,6 +189,11 @@
                 </plugin>
                 <plugin>
                     <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                    <version>${junit-jupiter-version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.junit.jupiter</groupId>
                     <artifactId>junit-jupiter-engine</artifactId>
                     <version>${junit-jupiter-version}</version>
                 </plugin>
