--- a/root/pom.xml
+++ b/root/pom.xml
@@ -28,7 +28,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 
-        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <spring.boot.plugin.version>3.1.2</spring.boot.plugin.version>
         <spring.boot.version>3.2.2</spring.boot.version>
         <jetty.version>12.0.5</jetty.version>
@@ -38,8 +37,10 @@
         <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
         <commons.cli.version>1.3.1</commons.cli.version>
         <commons-dbcp2.version>2.7.0</commons-dbcp2.version>
-        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
-        <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+
+        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+        <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+        <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
         <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
         <maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
         <maven-install-plugin.version>2.5.1</maven-install-plugin.version>
