--- a/root/pom.xml
+++ b/root/pom.xml
@@ -28,7 +28,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 
-        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <spring.boot.plugin.version>3.1.2</spring.boot.plugin.version>
         <spring.boot.version>3.2.2</spring.boot.version>
         <jetty.version>12.0.5</jetty.version>
@@ -38,12 +37,17 @@
         <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
         <commons.cli.version>1.3.1</commons.cli.version>
         <commons-dbcp2.version>2.7.0</commons-dbcp2.version>
-        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
-        <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+
+        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+        <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+        <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
         <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
+        <maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
         <maven-install-plugin.version>2.5.1</maven-install-plugin.version>
         <maven-site-plugin.version>3.3</maven-site-plugin.version>
         <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
+        <junit-jupiter-version>5.11.0</junit-jupiter-version>
+        <junit-platform-version>1.11.0</junit-platform-version>
 
         <dbeaver.common.version>2.2.0-SNAPSHOT</dbeaver.common.version>
         <lm.version>3.0.4-SNAPSHOT</lm.version>
@@ -171,6 +175,11 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven-dependency-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                 </plugin>
@@ -179,6 +188,22 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                    <version>${junit-jupiter-version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>${junit-jupiter-version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-runner</artifactId>
+                    <version>${junit-platform-version}</version>
+                </plugin>
+
                 <plugin>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>tycho-p2-plugin</artifactId>
