--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>org.jkiss.utils</module>
+        <module>com.dbeaver.jdbc</module>
         <module>com.dbeaver.rpc</module>
     </modules>
 
