dbeaver/pro#3384 jdbc api (#37)
* dbeaver/pro#3384 JDBC API

* dbeaver/pro#3384 JDBC API

* dbeaver/pro#3383 JDBC API

* dbeaver/pro#3383 JDBC API

* dbeaver/pro#3384 JDBC API moved to dbeaver-common

--- a/modules/com.dbeaver.jdbc.api/pom.xml
+++ b/modules/com.dbeaver.jdbc.api/pom.xml
@@ -8,15 +8,11 @@
     <version>2.2.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>com.dbeaver.rpc</artifactId>
-  <name>RPC framework</name>
+  <artifactId>com.dbeaver.jdbc.api</artifactId>
+  <name>JDBC framework</name>
   <packaging>eclipse-plugin</packaging>
 
   <dependencies>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-    </dependency>
     <dependency>
       <groupId>com.dbeaver.common</groupId>
       <artifactId>org.jkiss.utils</artifactId>
