--- a/root/pom.xml
+++ b/root/pom.xml
@@ -33,6 +33,7 @@
         <jetty.version>12.0.5</jetty.version>
         <clickhouse.jdbc.version>0.6.0-patch2</clickhouse.jdbc.version>
         <google.gson.version>2.11.0</google.gson.version>
+        <google.protobuf.version>3.25.5</google.protobuf.version>
         <org.codehouse.mojo.version>1.7</org.codehouse.mojo.version>
         <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
         <commons.cli.version>1.3.1</commons.cli.version>
@@ -77,6 +78,11 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${google.gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${google.protobuf.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.clickhouse</groupId>
