dbeaver/dbeaver-devops#1525 remove pull-repositories action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,7 @@ jobs:
       run-id: ${{ github.run_id }}
 
     steps:
-      - name: Checkout dbeaver-vscode
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - uses: stCarolas/setup-maven@v5
         with:
