--- a/.github/workflows/java-checkstyle.yml
+++ b/.github/workflows/java-checkstyle.yml
@@ -4,6 +4,14 @@ on:
   # Allows you to reuse workflows by referencing their YAML files
   workflow_call:
 
+concurrency:
+  group: |
+      # For pull requests, group by the pull request ID
+      ${{ github.event_name == 'pull_request' && format('pr-{0}-java-checkstyle', github.event.pull_request.number) }}
+
+      # For pushes to main, group by the branch name (e.g., 'main')
+      ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && 'main-branch-java-checkstyle' }}
+  cancel-in-progress: true
 jobs:
   lint:
     name: Lint
