--- a/.github/workflows/push-pr-devel.yml
+++ b/.github/workflows/push-pr-devel.yml
@@ -2,26 +2,22 @@ name: CI
 
 on:
   pull_request:
-    branches: [devel]
+    types:
+      - opened
+      - synchronize
+      - reopened
   push:
     branches: [devel]
 
-concurrency:
-  group: |
-      # For pull requests, group by the pull request ID
-      ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) }}
-
-      # For pushes to main, group by the branch name (e.g., 'main')
-      ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && 'main-branch' }}
-  cancel-in-progress: true
-
 jobs:
   build:
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/mvn-package.yml
     name: Check
     secrets: inherit
+    with:
+      timeout-minutes: 10
 
   lint:
-    uses: ./.github/workflows/lint.yml
+    uses: ./.github/workflows/java-checkstyle.yml
     name: Check
     secrets: inherit
