--- a/.github/workflows/mvn-package.yml
+++ b/.github/workflows/mvn-package.yml
@@ -61,7 +61,7 @@ jobs:
           project_deps_path: ${{ inputs.project-deps }}
           token: ${{ secrets.DEVOPS_ISSUE_RO_TOKEN }}
 
-      - uses: wroud/github-actions/install-maven@56f30609ac22a9ad021852a820ad04857208fe7b
+      - uses: dbeaver/github-actions/install-maven@devel
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
