--- a/.github/workflows/mvn-package.yml
+++ b/.github/workflows/mvn-package.yml
@@ -46,22 +46,18 @@ jobs:
       - name: Set repository path variable
         run: echo "CHECKOUT_PATH=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           path: ${{ env.CHECKOUT_PATH || '.' }}
 
-      - name: Clone Deps Repositories
+      - uses: dbeaver/github-actions/clone-repositories@devel
         if: ${{ inputs.project-deps != null }}
-        uses: dbeaver/github-actions/clone-repositories@devel
         with:
           project_deps_path: ${{ inputs.project-deps }}
           token: ${{ secrets.DEVOPS_ISSUE_RO_TOKEN }}
 
       - uses: dbeaver/github-actions/install-maven@devel
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
