--- a/.github/workflows/mvn-package.yml
+++ b/.github/workflows/mvn-package.yml
@@ -26,7 +26,7 @@ on:
         required: false
 
 concurrency:
-  group: ${{ github.event_name == 'pull_request' && format('pr-{0}-mvn-package', github.event.pull_request.number) || (github.event_name == 'push' && github.ref == 'refs/heads/main' && 'main-branch-mvn-package') || 'mvn-package' }}
+  group: ${{ github.event_name == 'pull_request' && format('pr-{0}-mvn-package', github.event.pull_request.number) || 'mvn-package' }}
   cancel-in-progress: true
 
 jobs:
