dbeaver/dbeaver-devops#1525

--- a/.github/workflows/java-checkstyle.yml
+++ b/.github/workflows/java-checkstyle.yml
@@ -9,6 +9,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   lint:
+    if: github.event.pull_request.draft != true
     name: Lint
     runs-on: ubuntu-latest
     timeout-minutes: 5
