--- a/.github/workflows/mvn-package.yml
+++ b/.github/workflows/mvn-package.yml
@@ -31,6 +31,7 @@ concurrency:
 
 jobs:
   build-and-test:
+    if: github.event.pull_request.draft != true
     name: Build
     runs-on: ubuntu-latest
     timeout-minutes: ${{ inputs.timeout-minutes }}
